# bbhunt

./: Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  run-audible-scan.sh
.builds/: bbhunt.yml
.github/workflows/: bbhunt.yml
config/: default.toml
profiles/: audible.toml  base.toml
src/: app.rs  cli.rs  config.rs  config_path.rs  context.rs  error.rs  lib.rs  main.rs  osint.rs  plugin.rs  report.rs  scope_filter.rs  target.rs  template.rs
src/cli/: app.rs  commands.rs  interactive.rs  mod.rs
src/config/: loader.rs  mod.rs  schema.rs
src/core/: cli.rs  mod.rs  parallel.rs  plugin.rs  report.rs  resource.rs  target.rs  task_generator.rs
src/engine/: mod.rs  parallel.rs  task.rs  workflow.rs
src/osint/: collector.rs  mod.rs  sources.rs
src/plugins/: mod.rs
src/plugins/exploit/: mod.rs
src/plugins/recon/: mod.rs  subdomain_enum.rs
src/plugins/scan/: mod.rs  web_scan.rs
src/profile/: loader.rs  mod.rs
src/reporting/: format.rs  generator.rs  mod.rs  model.rs  template.rs
src/reporting/formats/: html.rs  json.rs  markdown.rs  mod.rs
src/reporting/templates/: finding_template.html  finding_template.md  report_template.html  report_template.md
src/utils/: http.rs  mod.rs  shell.rs
templates/: finding.html  finding.md  report.html  report.md
