[package]
name = "bbhunt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular bug bounty hunting framework"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ipnetwork = "0.20.0"
uuid = { version = "1.4.1", features = ["v4"] }
once_cell = "1.19.0"
parking_lot = "0.12.3"

# CLI
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = "0.11.0"

# HTTP and Networking
reqwest = { version = "0.11.23", features = ["json", "native-tls"] }
url = { version = "2.5.0", features = ["serde"] }

# Configuration and Serialization 
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
config = "0.13.4"
toml = "0.8.8"

# System Interaction
dirs = "5.0.1"
num_cpus = "1.16.0"

# Date and Time
chrono = { version = "0.4.34", features = ["serde"] }

# Temp file handling
tempfile = "3.4.0"

# Regex
regex = "1.10.3"

[features]
default = []
docker = ["nix"]
telemetry = []

[dependencies.nix]
version = "0.27.1"
optional = true

[dev-dependencies]
mockall = "0.12.1"
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"